--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,15 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "typescript": "^5.2.2"
-  },
+ "dependencies": {
+  "@supabase/supabase-js": "^2.0.0",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-router-dom": "^6.17.0",
+  "react-scripts": "^5.0.1",
+  "typescript": "^5.2.2"
+}
+
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
